qt6/gen_qjsonarray.nim


proc fcQJsonArray_new(): ptr cQJsonArray {.importc: "QJsonArray_new".}
proc fcQJsonArray_new2(other: pointer): ptr cQJsonArray {.importc: "QJsonArray_new2".}
proc fcQJsonArray_operatorAssign(self: pointer, other: pointer): void {.importc: "QJsonArray_operatorAssign".}
proc fcQJsonArray_fromStringList(list: struct_miqt_array): pointer {.importc: "QJsonArray_fromStringList".}
proc fcQJsonArray_size(self: pointer, ): int64 {.importc: "QJsonArray_size".}
proc fcQJsonArray_count(self: pointer, ): int64 {.importc: "QJsonArray_count".}
proc fcQJsonArray_isEmpty(self: pointer, ): bool {.importc: "QJsonArray_isEmpty".}
proc fcQJsonArray_at(self: pointer, i: int64): pointer {.importc: "QJsonArray_at".}
proc fcQJsonArray_first(self: pointer, ): pointer {.importc: "QJsonArray_first".}
proc fcQJsonArray_last(self: pointer, ): pointer {.importc: "QJsonArray_last".}
proc fcQJsonArray_prepend(self: pointer, value: pointer): void {.importc: "QJsonArray_prepend".}
proc fcQJsonArray_append(self: pointer, value: pointer): void {.importc: "QJsonArray_append".}
proc fcQJsonArray_removeAt(self: pointer, i: int64): void {.importc: "QJsonArray_removeAt".}
proc fcQJsonArray_takeAt(self: pointer, i: int64): pointer {.importc: "QJsonArray_takeAt".}
proc fcQJsonArray_removeFirst(self: pointer, ): void {.importc: "QJsonArray_removeFirst".}
proc fcQJsonArray_removeLast(self: pointer, ): void {.importc: "QJsonArray_removeLast".}
proc fcQJsonArray_insert(self: pointer, i: int64, value: pointer): void {.importc: "QJsonArray_insert".}
proc fcQJsonArray_replace(self: pointer, i: int64, value: pointer): void {.importc: "QJsonArray_replace".}
proc fcQJsonArray_contains(self: pointer, element: pointer): bool {.importc: "QJsonArray_contains".}
proc fcQJsonArray_operatorSubscript(self: pointer, i: int64): pointer {.importc: "QJsonArray_operatorSubscript".}
proc fcQJsonArray_operatorSubscriptWithQsizetype(self: pointer, i: int64): pointer {.importc: "QJsonArray_operatorSubscriptWithQsizetype".}
proc fcQJsonArray_operatorEqual(self: pointer, other: pointer): bool {.importc: "QJsonArray_operatorEqual".}
proc fcQJsonArray_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QJsonArray_operatorNotEqual".}
proc fcQJsonArray_swap(self: pointer, other: pointer): void {.importc: "QJsonArray_swap".}
proc fcQJsonArray_begin(self: pointer, ): pointer {.importc: "QJsonArray_begin".}
proc fcQJsonArray_begin2(self: pointer, ): pointer {.importc: "QJsonArray_begin2".}
proc fcQJsonArray_constBegin(self: pointer, ): pointer {.importc: "QJsonArray_constBegin".}
proc fcQJsonArray_cbegin(self: pointer, ): pointer {.importc: "QJsonArray_cbegin".}
proc fcQJsonArray_endX(self: pointer, ): pointer {.importc: "QJsonArray_end".}
proc fcQJsonArray_end2(self: pointer, ): pointer {.importc: "QJsonArray_end2".}
proc fcQJsonArray_constEnd(self: pointer, ): pointer {.importc: "QJsonArray_constEnd".}
proc fcQJsonArray_cend(self: pointer, ): pointer {.importc: "QJsonArray_cend".}
proc fcQJsonArray_insert2(self: pointer, before: pointer, value: pointer): pointer {.importc: "QJsonArray_insert2".}
proc fcQJsonArray_erase(self: pointer, it: pointer): pointer {.importc: "QJsonArray_erase".}
proc fcQJsonArray_operatorPlus(self: pointer, v: pointer): pointer {.importc: "QJsonArray_operatorPlus".}
proc fcQJsonArray_operatorPlusAssign(self: pointer, v: pointer): pointer {.importc: "QJsonArray_operatorPlusAssign".}
proc fcQJsonArray_operatorShiftLeft(self: pointer, v: pointer): pointer {.importc: "QJsonArray_operatorShiftLeft".}
proc fcQJsonArray_pushBack(self: pointer, t: pointer): void {.importc: "QJsonArray_pushBack".}
proc fcQJsonArray_pushFront(self: pointer, t: pointer): void {.importc: "QJsonArray_pushFront".}
proc fcQJsonArray_popFront(self: pointer, ): void {.importc: "QJsonArray_popFront".}
proc fcQJsonArray_popBack(self: pointer, ): void {.importc: "QJsonArray_popBack".}
proc fcQJsonArray_empty(self: pointer, ): bool {.importc: "QJsonArray_empty".}
proc fcQJsonArray_delete(self: pointer) {.importc: "QJsonArray_delete".}
proc fcQJsonArrayiterator_new(): ptr cQJsonArrayiterator {.importc: "QJsonArray__iterator_new".}
proc fcQJsonArrayiterator_new2(array: pointer, index: int64): ptr cQJsonArrayiterator {.importc: "QJsonArray__iterator_new2".}
proc fcQJsonArrayiterator_new3(other: pointer): ptr cQJsonArrayiterator {.importc: "QJsonArray__iterator_new3".}
proc fcQJsonArrayiterator_operatorAssign(self: pointer, other: pointer): void {.importc: "QJsonArray__iterator_operatorAssign".}
proc fcQJsonArrayiterator_operatorMultiply(self: pointer, ): pointer {.importc: "QJsonArray__iterator_operatorMultiply".}
proc fcQJsonArrayiterator_operatorMinusGreater(self: pointer, ): pointer {.importc: "QJsonArray__iterator_operatorMinusGreater".}
proc fcQJsonArrayiterator_operatorMinusGreater2(self: pointer, ): pointer {.importc: "QJsonArray__iterator_operatorMinusGreater2".}
proc fcQJsonArrayiterator_operatorSubscript(self: pointer, j: int64): pointer {.importc: "QJsonArray__iterator_operatorSubscript".}
proc fcQJsonArrayiterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QJsonArray__iterator_operatorEqual".}
proc fcQJsonArrayiterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QJsonArray__iterator_operatorNotEqual".}
proc fcQJsonArrayiterator_operatorLesser(self: pointer, other: pointer): bool {.importc: "QJsonArray__iterator_operatorLesser".}
proc fcQJsonArrayiterator_operatorLesserOrEqual(self: pointer, other: pointer): bool {.importc: "QJsonArray__iterator_operatorLesserOrEqual".}
proc fcQJsonArrayiterator_operatorGreater(self: pointer, other: pointer): bool {.importc: "QJsonArray__iterator_operatorGreater".}
proc fcQJsonArrayiterator_operatorGreaterOrEqual(self: pointer, other: pointer): bool {.importc: "QJsonArray__iterator_operatorGreaterOrEqual".}
proc fcQJsonArrayiterator_operatorEqualWithQJsonArrayconstIterator(self: pointer, o: pointer): bool {.importc: "QJsonArray__iterator_operatorEqualWithQJsonArrayconstIterator".}
proc fcQJsonArrayiterator_operatorNotEqualWithQJsonArrayconstIterator(self: pointer, o: pointer): bool {.importc: "QJsonArray__iterator_operatorNotEqualWithQJsonArrayconstIterator".}
proc fcQJsonArrayiterator_operatorLesserWithOther(self: pointer, other: pointer): bool {.importc: "QJsonArray__iterator_operatorLesserWithOther".}
proc fcQJsonArrayiterator_operatorLesserOrEqualWithOther(self: pointer, other: pointer): bool {.importc: "QJsonArray__iterator_operatorLesserOrEqualWithOther".}
proc fcQJsonArrayiterator_operatorGreaterWithOther(self: pointer, other: pointer): bool {.importc: "QJsonArray__iterator_operatorGreaterWithOther".}
proc fcQJsonArrayiterator_operatorGreaterOrEqualWithOther(self: pointer, other: pointer): bool {.importc: "QJsonArray__iterator_operatorGreaterOrEqualWithOther".}
proc fcQJsonArrayiterator_operatorPlusPlus(self: pointer, ): pointer {.importc: "QJsonArray__iterator_operatorPlusPlus".}
proc fcQJsonArrayiterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QJsonArray__iterator_operatorPlusPlusWithInt".}
proc fcQJsonArrayiterator_operatorMinusMinus(self: pointer, ): pointer {.importc: "QJsonArray__iterator_operatorMinusMinus".}
proc fcQJsonArrayiterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QJsonArray__iterator_operatorMinusMinusWithInt".}
proc fcQJsonArrayiterator_operatorPlusAssign(self: pointer, j: int64): pointer {.importc: "QJsonArray__iterator_operatorPlusAssign".}
proc fcQJsonArrayiterator_operatorMinusAssign(self: pointer, j: int64): pointer {.importc: "QJsonArray__iterator_operatorMinusAssign".}
proc fcQJsonArrayiterator_operatorPlus(self: pointer, j: int64): pointer {.importc: "QJsonArray__iterator_operatorPlus".}
proc fcQJsonArrayiterator_operatorMinus(self: pointer, j: int64): pointer {.importc: "QJsonArray__iterator_operatorMinus".}
proc fcQJsonArrayiterator_operatorMinusWithQJsonArrayiterator(self: pointer, j: pointer): int64 {.importc: "QJsonArray__iterator_operatorMinusWithQJsonArrayiterator".}
proc fcQJsonArrayiterator_delete(self: pointer) {.importc: "QJsonArray__iterator_delete".}
proc fcQJsonArrayconst_iterator_new(): ptr cQJsonArrayconst_iterator {.importc: "QJsonArray__const_iterator_new".}
proc fcQJsonArrayconst_iterator_new2(array: pointer, index: int64): ptr cQJsonArrayconst_iterator {.importc: "QJsonArray__const_iterator_new2".}
proc fcQJsonArrayconst_iterator_new3(o: pointer): ptr cQJsonArrayconst_iterator {.importc: "QJsonArray__const_iterator_new3".}
proc fcQJsonArrayconst_iterator_new4(other: pointer): ptr cQJsonArrayconst_iterator {.importc: "QJsonArray__const_iterator_new4".}
proc fcQJsonArrayconst_iterator_operatorAssign(self: pointer, other: pointer): void {.importc: "QJsonArray__const_iterator_operatorAssign".}
proc fcQJsonArrayconst_iterator_operatorMultiply(self: pointer, ): pointer {.importc: "QJsonArray__const_iterator_operatorMultiply".}
proc fcQJsonArrayconst_iterator_operatorMinusGreater(self: pointer, ): pointer {.importc: "QJsonArray__const_iterator_operatorMinusGreater".}
proc fcQJsonArrayconst_iterator_operatorSubscript(self: pointer, j: int64): pointer {.importc: "QJsonArray__const_iterator_operatorSubscript".}
proc fcQJsonArrayconst_iterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QJsonArray__const_iterator_operatorEqual".}
proc fcQJsonArrayconst_iterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QJsonArray__const_iterator_operatorNotEqual".}
proc fcQJsonArrayconst_iterator_operatorLesser(self: pointer, other: pointer): bool {.importc: "QJsonArray__const_iterator_operatorLesser".}
proc fcQJsonArrayconst_iterator_operatorLesserOrEqual(self: pointer, other: pointer): bool {.importc: "QJsonArray__const_iterator_operatorLesserOrEqual".}
proc fcQJsonArrayconst_iterator_operatorGreater(self: pointer, other: pointer): bool {.importc: "QJsonArray__const_iterator_operatorGreater".}
proc fcQJsonArrayconst_iterator_operatorGreaterOrEqual(self: pointer, other: pointer): bool {.importc: "QJsonArray__const_iterator_operatorGreaterOrEqual".}
proc fcQJsonArrayconst_iterator_operatorPlusPlus(self: pointer, ): pointer {.importc: "QJsonArray__const_iterator_operatorPlusPlus".}
proc fcQJsonArrayconst_iterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QJsonArray__const_iterator_operatorPlusPlusWithInt".}
proc fcQJsonArrayconst_iterator_operatorMinusMinus(self: pointer, ): pointer {.importc: "QJsonArray__const_iterator_operatorMinusMinus".}
proc fcQJsonArrayconst_iterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QJsonArray__const_iterator_operatorMinusMinusWithInt".}
proc fcQJsonArrayconst_iterator_operatorPlusAssign(self: pointer, j: int64): pointer {.importc: "QJsonArray__const_iterator_operatorPlusAssign".}
proc fcQJsonArrayconst_iterator_operatorMinusAssign(self: pointer, j: int64): pointer {.importc: "QJsonArray__const_iterator_operatorMinusAssign".}
proc fcQJsonArrayconst_iterator_operatorPlus(self: pointer, j: int64): pointer {.importc: "QJsonArray__const_iterator_operatorPlus".}
proc fcQJsonArrayconst_iterator_operatorMinus(self: pointer, j: int64): pointer {.importc: "QJsonArray__const_iterator_operatorMinus".}
proc fcQJsonArrayconst_iterator_operatorMinusWithQJsonArrayconstIterator(self: pointer, j: pointer): int64 {.importc: "QJsonArray__const_iterator_operatorMinusWithQJsonArrayconstIterator".}
proc fcQJsonArrayconst_iterator_delete(self: pointer) {.importc: "QJsonArray__const_iterator_delete".}


func init*(T: type QJsonArray, h: ptr cQJsonArray): QJsonArray =
  T(h: h)
proc create*(T: type QJsonArray, ): QJsonArray =

  QJsonArray.init(fcQJsonArray_new())
proc create*(T: type QJsonArray, other: QJsonArray): QJsonArray =

  QJsonArray.init(fcQJsonArray_new2(other.h))
proc operatorAssign*(self: QJsonArray, other: QJsonArray): void =

  fcQJsonArray_operatorAssign(self.h, other.h)

proc fromStringList*(_: type QJsonArray, list: seq[string]): QJsonArray =
